    and Catalan.

  * Fixed locale typos in source ("cs" not "cz" for Czech, and "sv" not "se"
    for Swedish).

  * Updated default configuration file to include examples of some newer
    options.

  * White/grey in tintable stamps don't get tinted now.

  * Stamps in homedir are now loaded before system-wide stamps.
  
  * "--lang=XXX" can be used on the command-line, along with "--lang XXX"


2003.Aug.18 (0.9.12)
  * Replaced "efont-serif" fonts with those from the 'ttf-freefont' package,
    for better support of ISO8859-13 symbols (e.g., for Lithuanian).
    Fonts copyright the Free Software Foundation.
    Thanks to Mantas Kriauciunas <monte@mail.lt> for the tip.

  * Made main event loop ignore motion events if the loop has spun too long.
    (Fixes problems where shape or stamp tools take forver to 'catch up' with
    the mouse; especially noticable on slow machines over remote X display.)

  * Walloon translation.
    Pablo Saratxaga <pablo@walon.org>
  
  * Translated to Russian
    Dmitriy Ivanov <ace22b@myrealbox.com>

  * Translated to Malay
    Muhammad Najmi Ahmad Zabidi <md_najmi@yahoo.com>

  * French translation update.
    Jacques Chion <Jacques.Chion@wanadoo.fr>

  * Chinese translation update.
    Wang Jian <lark@linux.net.cn>
  
  * If gnome-config is not found, it doesn't necessarily mean Gnome isn't being
    used!  Makefile will now fall-back and assume $GNOME_PREFIX should be /usr,
    so that the launcher icon gets installed into the Gnome menu.
  
  * Added some "#error" directives to give verbose output regarding missing
    library header files.  (Typical cause of this symptom is forgetting to
    install dev. packages; e.g., installed "SDL.rpm", but not "SDL-dev.rpm")

  * Fixed Mac OS X #include typo.
    Darrell Walisser <walisser@mac.com>

  * Fixed bug where non-translated stamp description text would get drawn
    right-to-left after the kudos text (e.g., "Great!") goes away.
    Thanks to Itai <Itais@newmail.net>
  